--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "nodejs server.js",
+    "start": "node server.js",
     "build": "umi build",
     "test": "umi test",
     "lint": "eslint --ext .js src mock tests",
